(lang dune 3.16)

(name jaccard)

(generate_opam_files true)

(source
 (github khalidbelk/jaccard))

(authors "Khalid B.")

(maintainers "Khalid B.")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name jaccard)
 (synopsis "A simple Similarity Index calculation")
 (description "Calculate the similarity index between two texts.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
